deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: version-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: version
        version: v1
    spec:
      containers:
      - name: version
        image: coderpews/version-app:1.0
        ports:
        - containerPort: 5000
          name: web
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 1
          periodSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 5000


---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: version-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: version
        version: v2
    spec:
      containers:
      - name: version
        image: coderpews/version-app:2.0
        ports:
        - containerPort: 5000
          name: web
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 1
          periodSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 5000  
---

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: version-v3
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: version
        version: v3
    spec:
      containers:
      - name: version
        image: coderpews/version-app:3.0
        ports:
        - containerPort: 5000
          name: web
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 1
          periodSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 5000  
---
apiVersion: v1
kind: Service
metadata:
  name: version
spec:
  selector:
    app: version
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 5000
