deploy.ing.1.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: version
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: version
    spec:
      containers:
      - name: version
        image: coderpews/version-app:3.0
        ports:
        - containerPort: 5000
          name: web
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 1
          periodSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 5000  
---
apiVersion: v1
kind: Service
metadata:
  name: version
spec:
  selector:
    app: version
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: versionfront
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: versionfront
    spec:
      containers:
      - name: versionfront
        image: coderpews/version-app-front:1.0
        ports:
        - containerPort: 80
          name: web
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 1
          periodSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 80  

----

apiVersion: v1
kind: Service
metadata:
  name: versionfront
spec:
  selector:
    app: versionfront
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---



apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: version-ingress
spec:
  rules:
  - host: version.snadder.io
    http:
      paths:
      - path: /api
        backend:
          serviceName: version
          servicePort: 5000
      # - path: /
      #     backend:
      #       serviceName: version-front
      #       servicePort: 80
---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: version-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   - host: 
#     http:
#       paths:
#       - path: /version
#         backend:
#           serviceName: version
#           servicePort: 5000
