deploy_ingress.yml
---

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: version
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: version
    spec:
      containers:
      - name: version
        image: coderpews/version-app:3.0
        ports:
        - containerPort: 5000
          name: web
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 1
          periodSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 5000  
---
apiVersion: v1
kind: Service
metadata:
  name: version
spec:
  selector:
    app: version
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 5000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: version-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: version.snadder.io
    http:
      paths:
      - path: /
        backend:
          serviceName: version
          servicePort: 5000
