istio.weight.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: version-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: version
spec:
  hosts:
  - "*"
  gateways:
  - version-gateway
  http:
    - route:
      - destination:
          host: version
          subset: v1
          port:
            number: 5000
        weight: 25
      - destination:
          host: version
          subset: v2
          port:
            number: 5000
        weight: 25
      - destination:
          host: version
          subset: v3
          port:
            number: 5000
        weight: 50




    # - route:
    #   - destination:
    #       host: version
    #       subset: v2
    #       port:
    #         number: 5000
    #     weight: 25
    # - route:
    #   - destination:
    #       host: version
    #       subset: v1
    #       port:
    #         number: 5000
    #     weight: 25
    # - route:
    #   - destination:
    #       host: version
    #       subset: v3
    #       port:
    #         number: 5000
    #    weight: 50

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: version
spec:
  host: version
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
