istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: version-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: version
spec:
  hosts:
  - "*"
  #- "httpbin.example.com"
  gateways:
  - version-gateway
  http:
  - route:
    - destination:
        host: version
        port:
          number: 5000
